--- a/index.html
+++ b/index.html
@@ -1617,7 +1617,7 @@
 	</div>
 </div>
 	<!-- Swiper -->
-<script src="https://unpkg.com/browse/swiper@6.8.4/"></script>
+<!-- <script src="https://unpkg.com/browse/swiper@6.8.4/"></script> -->
 <script src="js/vendors.min.js"></script>
 <script src="js/app.min.js"></script>
 </body>
